Fix facts blockquote styling, add extra padding to about

--- a/src/modules/about/about.css
+++ b/src/modules/about/about.css
@@ -28,7 +28,7 @@
   color: black;
   font-size: 24px;
   margin: 0;
-  padding: 0 10px;
+  padding: 0 15px;
   filter: drop-shadow(3px 3px #333);
 }
 
